hphp/test/zend/good/ext/date/tests/strftime_variation23.php.expectregex
\*\*\* Testing strftime\(\) : usage variation \*\*\*

-- Testing strftime\(\) function with float 12.3456789000e10 to timestamp --
string\(\d*\)\s"Mar\s(26|11)\s(1935|5882)\s(04|00):(50|30):(16|00)"

-- Testing strftime\(\) function with float -12.3456789000e10 to timestamp --
string\(\d*\)\s"(Oct|Nov|Dec)\s(08|13|18|22)\s(2004|1901|1930|-1943)\s(00|19|20|23):(28|09|45|30):(30|44|52|00)"
===DONE===
