hphp/test/zend/bad/ext-date/gmdate_variation14.php.expectregex
\*\*\* Testing gmdate\(\) : usage variation \*\*\*

-- Testing gmdate\(\) function with float 12.3456789000e10 to timestamp --
string\((24|25)\) "(1935-03-26T04:50:16\+0000|5882-03-11T00:30:00\+0000)"

-- Testing gmdate\(\) function with float -12.3456789000e10 to timestamp --
string\((24|25)\) "(2004-10-08T19:09:44\+0000|1901-12-13T20:45:52\+0000|-1943-10-22T23:30:00\+0000)"
===DONE===